--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="box">
           <img
             class="image"
-            src="https://images.unsplash.com/photo-1636103952204-0b738c225264?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+            src="https://images.unsplash.com/photo-1543466835-00a7907e9de1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
             alt=""
           />
           <div class="content">
@@ -81,7 +81,7 @@
         <div class="box">
           <img
             class="image"
-            src="https://images.unsplash.com/photo-1591209608777-fb022eac7112?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+            src="https://images.unsplash.com/photo-1511044568932-338cba0ad803?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
             alt=""
           />
           <div class="content">
@@ -97,7 +97,7 @@
         <div class="box">
           <img
             class="image"
-            src="https://images.unsplash.com/photo-1526667942879-37dee646a80c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80"
+            src="https://images.unsplash.com/photo-1589933767411-38a58367efd7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=558&q=80"
             alt=""
           />
           <div class="content">
@@ -117,8 +117,8 @@
             alt=""
           />
           <div class="content">
-            <img src="img/dangling-earring.png" alt="" />
-            <h3>earrings</h3>
+            <img src="images/hen.png" alt="" />
+            <h3>pula</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
               inventore neque amet ipsa tenetur voluptates aperiam tempore
@@ -129,12 +129,12 @@
         <div class="box">
           <img
             class="image"
-            src="https://images.unsplash.com/photo-1604242692760-2f7b0c26856d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80"
+            src="https://images.unsplash.com/photo-1505089709238-27c333d4c16d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=872&q=80"
             alt=""
           />
           <div class="content">
-            <img src="img/watch.png" alt="" />
-            <h3>Watches</h3>
+            <img src="images/peace.png" alt="" />
+            <h3>bird</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
               inventore neque amet ipsa tenetur voluptates aperiam tempore
@@ -193,16 +193,16 @@
     <!-- gallery section starts  -->
 
     <section class="gallery" id="gallery">
-      <h1 class="heading">our accessories <span> gallery </span></h1>
+      <h1 class="heading">our animal <span> gallery </span></h1>
 
       <div class="box-container">
         <div class="box">
           <img
-            src="https://images.unsplash.com/photo-1509941943102-10c232535736?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+            src="https://images.unsplash.com/photo-1589277019998-e3940c9eb559?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
             alt=""
           />
           <div class="content">
-            <h3>Accessories</h3>
+            <h3>Animals</h3>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
@@ -212,11 +212,11 @@
         </div>
         <div class="box">
           <img
-            src="https://images.unsplash.com/photo-1584302179602-e4c3d3fd629d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+            src="https://images.unsplash.com/photo-1516992126647-05b9172460fa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80"
             alt=""
           />
           <div class="content">
-            <h3>Accessories</h3>
+            <h3>Animals</h3>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
@@ -226,11 +226,11 @@
         </div>
         <div class="box">
           <img
-            src="https://images.unsplash.com/photo-1588253293138-ed5da9c55b12?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80"
+            src="https://images.unsplash.com/photo-1455287278107-115faab3eafa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80"
             alt=""
           />
           <div class="content">
-            <h3>Accessories</h3>
+            <h3>Animals</h3>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
@@ -240,11 +240,11 @@
         </div>
         <div class="box">
           <img
-            src="https://images.unsplash.com/photo-1633934542430-0905ccb5f050?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=725&q=80"
+            src="https://images.unsplash.com/photo-1628071554664-0b8942cbd11c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
             alt=""
           />
           <div class="content">
-            <h3>Accessories</h3>
+            <h3>Animals</h3>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
@@ -254,11 +254,11 @@
         </div>
         <div class="box">
           <img
-            src="https://images.unsplash.com/photo-1512163143273-bde0e3cc7407?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+            src="https://images.unsplash.com/photo-1609953301824-81b4a53c28f4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
             alt=""
           />
           <div class="content">
-            <h3>Accessories</h3>
+            <h3>Animals</h3>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
@@ -268,11 +268,11 @@
         </div>
         <div class="box">
           <img
-            src="https://images.unsplash.com/photo-1536502829567-baf877a670b5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+            src="https://images.unsplash.com/photo-1522276498395-f4f68f7f8454?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80"
             alt=""
           />
           <div class="content">
-            <h3>Accessories</h3>
+            <h3>Animals</h3>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
@@ -282,11 +282,11 @@
         </div>
         <div class="box">
           <img
-            src="https://images.unsplash.com/photo-1494005826588-25b58776edbc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+            src="https://images.unsplash.com/photo-1514917151705-150d9bcf5acd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=873&q=80"
             alt=""
           />
           <div class="content">
-            <h3>Accessories</h3>
+            <h3>Animals</h3>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
@@ -296,11 +296,11 @@
         </div>
         <div class="box">
           <img
-            src="https://images.unsplash.com/photo-1623040593884-0044b3ce4ff9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+            src="https://images.unsplash.com/photo-1583840024136-64e17a1f9c56?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
             alt=""
           />
           <div class="content">
-            <h3>Accessories</h3>
+            <h3>Animals</h3>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
@@ -310,11 +310,11 @@
         </div>
         <div class="box">
           <img
-            src="https://images.unsplash.com/photo-1473496169904-658ba7c44d8a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+            src="https://images.unsplash.com/photo-1522858547137-f1dcec554f55?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
             alt=""
           />
           <div class="content">
-            <h3>Accessories</h3>
+            <h3>Animals</h3>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
