--- a/hp.html
+++ b/hp.html
@@ -31,9 +31,9 @@
         <a href="#speciality">speciality</a>
         <a href="#gallery">gallery</a>
         <a href="#review">review</a>
+        <a href="#tasks">Tasks</a>
         <a href="#contact-us">contact us</a>
-        <a href="signup.html" class="user">sign up</a>
-        <a href="login.html" class="user">log in</a>
+        <a href="index.html" class="user">log out</a>
       </nav>
     </header>
     <!-- header section ends -->
@@ -326,6 +326,47 @@
     </section>
 
     <!-- gallery section ends -->
+
+    <!-- tasks section starts -->
+    <section class="tasks" id="tasks">
+        <h1 class="heading">Our <span>tasks</span></h1>
+
+        <div class="box-container">
+            <div class="box1">
+                <h4>date</h4>
+                <h4>location</h4>
+                <h4>photo</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+                  delectus, ducimus facere quod ratione vel laboriosam? Est, maxime
+                  rem. Itaque.
+                </p>
+              </div>
+              <div class="box1">
+                <h4>date</h4>
+                <h4>location</h4>
+                <h4>photo</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+                  delectus, ducimus facere quod ratione vel laboriosam? Est, maxime
+                  rem. Itaque.
+                </p>
+              </div>
+              <div class="box1">
+                <h4>date</h4>
+                <h4>location</h4>
+                <h4>photo</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+                  delectus, ducimus facere quod ratione vel laboriosam? Est, maxime
+                  rem. Itaque.
+                </p>
+              </div>
+        </div><br><br><br>
+        <a href="#" class="btn reverse report" onclick="report()">report</a>
+    </section>
+
+    <!-- tasks section ends -->
 
     <!-- review section starts  -->
 
