--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="#popular">popular</a>
         <a href="#gallery">gallery</a>
         <a href="#review">review</a>
-        <a href="#order">order</a>
+        <a href="#order">Adopt</a>
         <a href="#contact-us">contact us</a>
       </nav>
     </header>
@@ -207,7 +207,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
             </p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">adobt now</a>
           </div>
         </div>
         <div class="box">
@@ -330,12 +330,12 @@
     <!-- review section starts  -->
 
     <section class="review" id="review">
-      <h1 class="heading">our customers <span>reviews</span></h1>
+      <h1 class="heading">our users <span>reviews</span></h1>
 
       <div class="box-container">
         <div class="box">
           <img src="img/pic1.png" alt="" />
-          <h3>john deo</h3>
+          <h3>hana berisha</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -351,7 +351,7 @@
         </div>
         <div class="box">
           <img src="img/pic2.png" alt="" />
-          <h3>john deo</h3>
+          <h3>omer hoxha</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -367,7 +367,7 @@
         </div>
         <div class="box">
           <img src="img/pic3.png" alt="" />
-          <h3>john deo</h3>
+          <h3>maja kuleta</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -404,7 +404,7 @@
       </div>
 
       <h1 class="credit">
-        created by <span> Yllkë Berisha </span> <i class="far fa-heart"></i>
+        created by <span> Paws </span> <i class="far fa-heart"></i>
       </h1>
     </section>
     <a href="#home" class="fas fa-angle-up" id="scroll-top"></a>
