--- a/hp.html
+++ b/hp.html
@@ -113,12 +113,12 @@
         <div class="box">
           <img
             class="image"
-            src="https://images.unsplash.com/photo-1614674688937-407a267e4497?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1010&q=80"
+            src="https://images.unsplash.com/photo-1603314585442-ee3b3c16fbcf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
             alt=""
           />
           <div class="content">
-            <img src="images/hen.png" alt="" />
-            <h3>pula</h3>
+            <img src="images/paw.png" alt="" />
+            <h3>kitten</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
               inventore neque amet ipsa tenetur voluptates aperiam tempore
@@ -145,12 +145,12 @@
         <div class="box">
           <img
             class="image"
-            src="https://images.unsplash.com/photo-1556306535-38febf6782e7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+            src="https://images.unsplash.com/photo-1562176546-95420556c872?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
             alt=""
           />
           <div class="content">
-            <img src="img/glasses.png" alt="" />
-            <h3>glasses</h3>
+            <img src="images/puppy.png" alt="" />
+            <h3>puppy</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
               inventore neque amet ipsa tenetur voluptates aperiam tempore
@@ -160,30 +160,28 @@
         </div>
       </div>
     </section>
-
     <!-- speciality section ends -->
 
     <!-- steps section starts  -->
-
     <div class="step-container">
       <h1 class="heading">how it <span>works</span></h1>
 
       <section class="steps">
         <div class="box">
-          <img src="img/choice.png" alt="" />
-          <h3>choose your favorite accessories</h3>
+          <img src="images/paw (2).png" alt="" />
+          <h3>See animals in the streets</h3>
         </div>
         <div class="box">
-          <img src="img/fast-delivery.png" alt="" />
-          <h3>free and fast delivery</h3>
+          <img src="images/animal-care.png" alt="" />
+          <h3>Help them by reporting</h3>
         </div>
         <div class="box">
-          <img src="img/wallet.png" alt="" />
-          <h3>easy payments methods</h3>
+          <img src="images/choice (1).png" alt="" />
+          <h3>Find an animal you like</h3>
         </div>
         <div class="box">
-          <img src="img/celebration.png" alt="" />
-          <h3>and finally, enjoy your accessories</h3>
+          <img src="images/animal.png" alt="" />
+          <h3>and finally, Adopt</h3>
         </div>
       </section>
     </div>
@@ -207,7 +205,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
             </p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">adobt now</a>
           </div>
         </div>
         <div class="box">
@@ -221,7 +219,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
             </p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">adobt now</a>
           </div>
         </div>
         <div class="box">
@@ -235,7 +233,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
             </p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">adobt now</a>
           </div>
         </div>
         <div class="box">
@@ -249,7 +247,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
             </p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">adobt now</a>
           </div>
         </div>
         <div class="box">
@@ -263,7 +261,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
             </p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">adobt now</a>
           </div>
         </div>
         <div class="box">
@@ -277,7 +275,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
             </p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">adobt now</a>
           </div>
         </div>
         <div class="box">
@@ -291,7 +289,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
             </p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">adobt now</a>
           </div>
         </div>
         <div class="box">
@@ -305,7 +303,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
             </p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">adobt now</a>
           </div>
         </div>
         <div class="box">
@@ -319,7 +317,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
             </p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">adobt now</a>
           </div>
         </div>
       </div>
@@ -336,7 +334,7 @@
                 <h4>date</h4>
                 <h4>location</h4>
                 <h4>photo</h4>
-                <p>
+                <p style="color: rgb(116, 112, 112);">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
                   delectus, ducimus facere quod ratione vel laboriosam? Est, maxime
                   rem. Itaque.
@@ -346,7 +344,7 @@
                 <h4>date</h4>
                 <h4>location</h4>
                 <h4>photo</h4>
-                <p>
+                <p style="color: rgb(116, 112, 112);">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
                   delectus, ducimus facere quod ratione vel laboriosam? Est, maxime
                   rem. Itaque.
@@ -356,7 +354,7 @@
                 <h4>date</h4>
                 <h4>location</h4>
                 <h4>photo</h4>
-                <p>
+                <p style="color: rgb(116, 112, 112);">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
                   delectus, ducimus facere quod ratione vel laboriosam? Est, maxime
                   rem. Itaque.
@@ -445,7 +443,7 @@
       </div>
 
       <h1 class="credit">
-        created by <span> Yllkë Berisha </span> <i class="far fa-heart"></i>
+        created by <span>Paws </span> <i class="far fa-heart"></i>
       </h1>
     </section>
     <a href="#home" class="fas fa-angle-up" id="scroll-top"></a>
