--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
         <div class="box">
           <img
             class="image"
-            src="https://images.unsplash.com/photo-1614674688937-407a267e4497?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1010&q=80"
+            src="https://images.unsplash.com/photo-1603314585442-ee3b3c16fbcf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
             alt=""
           />
           <div class="content">
-            <img src="images/hen.png" alt="" />
+            <img src="images/paw.png" alt="" />
             <h3>kitten</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
@@ -146,12 +146,12 @@
         <div class="box">
           <img
             class="image"
-            src="https://images.unsplash.com/photo-1556306535-38febf6782e7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+            src="https://images.unsplash.com/photo-1562176546-95420556c872?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
             alt=""
           />
           <div class="content">
-            <img src="img/glasses.png" alt="" />
-            <h3>glasses</h3>
+            <img src="images/puppy.png" alt="" />
+            <h3>puppy</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
               inventore neque amet ipsa tenetur voluptates aperiam tempore
@@ -171,20 +171,20 @@
 
       <section class="steps">
         <div class="box">
-          <img src="img/choice.png" alt="" />
-          <h3>choose your favorite accessories</h3>
+          <img src="images/paw (2).png" alt="" />
+          <h3>See animals in the streets</h3>
         </div>
         <div class="box">
-          <img src="img/fast-delivery.png" alt="" />
-          <h3>free and fast delivery</h3>
+          <img src="images/animal-care.png" alt="" />
+          <h3>Help them by reporting</h3>
         </div>
         <div class="box">
-          <img src="img/wallet.png" alt="" />
-          <h3>easy payments methods</h3>
+          <img src="images/choice (1).png" alt="" />
+          <h3>Find an animal you like</h3>
         </div>
         <div class="box">
-          <img src="img/celebration.png" alt="" />
-          <h3>and finally, enjoy your accessories</h3>
+          <img src="images/animal.png" alt="" />
+          <h3>and finally, Adopt</h3>
         </div>
       </section>
     </div>
@@ -222,7 +222,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
             </p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">adobt now</a>
           </div>
         </div>
         <div class="box">
@@ -236,7 +236,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
             </p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">adobt now</a>
           </div>
         </div>
         <div class="box">
@@ -250,7 +250,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
             </p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">adobt now</a>
           </div>
         </div>
         <div class="box">
@@ -264,7 +264,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
             </p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">adobt now</a>
           </div>
         </div>
         <div class="box">
@@ -278,7 +278,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
             </p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">adobt now</a>
           </div>
         </div>
         <div class="box">
@@ -292,7 +292,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
             </p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">adobt now</a>
           </div>
         </div>
         <div class="box">
@@ -306,7 +306,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
             </p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">adobt now</a>
           </div>
         </div>
         <div class="box">
@@ -320,7 +320,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Deleniti, ipsum.
             </p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">adobt now</a>
           </div>
         </div>
       </div>
