--- a/hp.html
+++ b/hp.html
@@ -373,7 +373,7 @@
 
       <div class="box-container">
         <div class="box">
-          <img src="img/pic1.png" alt="" />
+          <img src="images/pic1.png" alt="" />
           <h3>john deo</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -389,7 +389,7 @@
           </p>
         </div>
         <div class="box">
-          <img src="img/pic2.png" alt="" />
+          <img src="images/pic2.png" alt="" />
           <h3>john deo</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -405,7 +405,7 @@
           </p>
         </div>
         <div class="box">
-          <img src="img/pic3.png" alt="" />
+          <img src="images/pic3.png" alt="" />
           <h3>john deo</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
