--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
       <div class="box-container">
         <div class="box">
-          <img src="img/pic1.png" alt="" />
+          <img src="images/pic1.png" alt="" />
           <h3>hana berisha</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -351,7 +351,7 @@
           </p>
         </div>
         <div class="box">
-          <img src="img/pic2.png" alt="" />
+          <img src="images/pic2.png" alt="" />
           <h3>omer hoxha</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
@@ -367,7 +367,7 @@
           </p>
         </div>
         <div class="box">
-          <img src="img/pic3.png" alt="" />
+          <img src="images/pic3.png" alt="" />
           <h3>maja kuleta</h3>
           <div class="stars">
             <i class="fas fa-star"></i>
