--- a/login.html
+++ b/login.html
@@ -37,7 +37,10 @@
           <span>or use your account</span>
           <input type="email" placeholder="Email" />
           <input type="password" placeholder="Password" />
-          <button><a href="hp.html" class="su">Log in</a></button>
+          <div class="btns">
+            <button><a href="hp.html" class="su">Log in</a></button>
+            <button style="margin: 5px;"><a href="index.html" class="su">Go back</a></button>
+          </div>
           <a href="signup.html">Don't have an account? Sign up</a>
         </form>
       </div>
