--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,10 @@
           <input type="email" placeholder="Name" />
           <input type="email" placeholder="Email" />
           <input type="password" placeholder="Password" />
-          <button><a href="hp.html" class="su">Sign up</a></button>
+          <div class="buttons">
+            <button><a href="hp.html" class="su ">Sign up</a></button>
+            <button ><a href="index.html" class="su si">Go back</a></button>
+          </div>
         </form>
       </div>
       <div class="overlay-container">
