--- a/tasks.html
+++ b/tasks.html
@@ -33,8 +33,11 @@
           <input type="file" id="img" name="img" accept="image/*" placeholder="Upload a photo" />
           <input type="text" id="p" placeholder="description" />
           <br>
-          <button><a class="su" onclick="raporto()">Report</a></button>
-    </form>
+          <div class="buttons">
+          <button><a class="su so" onclick="raporto()">Report</a></button>
+          <button ><a href="index.html" class="su so">Go back</a></button>
+          </div>
+        </form>
     </div>
     
    
